test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/src/main.sw
script;

trait A {
    fn f(self) -> u64;
}

impl<T, const N: u64> A for [T; N] {
    #[allow(dead_code)]
    fn f(self) -> u64 {
        1
    }
}

fn main() {
}
